// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnPickerFilter should be rendered correctly 1`] = `
Array [
  <div
    className="root size-36 background-white body undefined container align-items-center"
    style={
      Object {
        "maxHeight": 300,
      }
    }
  >
    <div
      className="root scrollContainer root"
      cx="scrollContainer root"
      style={
        Object {
          "display": "flex",
          "height": "100%",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "bottom": 0,
            "display": "flex",
            "flex": "1 1 auto",
            "flexDirection": "column",
            "left": 0,
            "marginBottom": 0,
            "marginRight": 0,
            "overflow": "scroll",
            "position": "relative",
            "right": 0,
            "top": 0,
          }
        }
      >
        <div
          className="listContainer"
          style={
            Object {
              "minHeight": "0px",
            }
          }
        >
          <div
            role="listbox"
            style={
              Object {
                "marginTop": 0,
              }
            }
          >
            <div
              aria-posinset={1}
              aria-selected={false}
              className="uui-focus pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={2}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={3}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={4}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={5}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={6}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={7}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={8}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={9}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={10}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={11}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="uui-track-horizontal"
        style={
          Object {
            "display": "none",
            "height": 6,
            "position": "absolute",
          }
        }
      >
        <div
          className="uui-thumb-horizontal"
        />
      </div>
      <div
        className="uui-track-vertical"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": 6,
          }
        }
      >
        <div
          className="uui-thumb-vertical"
        />
      </div>
    </div>
  </div>,
  <div
    className="root size-36 background-white padding-12 container align-items-center"
  >
    <label
      className="container root size-18 uui-disabled"
    >
      <div
        className="uui-switch-body"
      >
        <input
          aria-checked={false}
          aria-disabled={true}
          checked={false}
          disabled={true}
          onChange={[Function]}
          role="switch"
          type="checkbox"
        />
        <div
          className="uui-switch-toggler"
        />
      </div>
      <div
        className="uui-input-label"
      >
        Show only selected
      </div>
    </label>
    <div
      className="flexSpacer"
    />
    <div
      className=""
      style={
        Object {
          "alignSelf": "center",
          "flexBasis": "auto",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <button
        aria-disabled={true}
        className="container uui-button-box uui-disabled -clickable root size-36 linkButton-color-blue uui-no-left-icon uui-no-right-icon"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={-1}
      >
        <div
          className="uui-caption"
        >
          CLEAR
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`ColumnPickerFilter should be rendered correctly 2`] = `
Array [
  <div
    className="root size-36 background-white body undefined container align-items-center"
    style={
      Object {
        "maxHeight": 300,
      }
    }
  >
    <div
      className="root scrollContainer root"
      cx="scrollContainer root"
      style={
        Object {
          "display": "flex",
          "height": "100%",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "bottom": 0,
            "display": "flex",
            "flex": "1 1 auto",
            "flexDirection": "column",
            "left": 0,
            "marginBottom": 0,
            "marginRight": 0,
            "overflow": "scroll",
            "position": "relative",
            "right": 0,
            "top": 0,
          }
        }
      >
        <div
          className="listContainer"
          style={
            Object {
              "minHeight": "0px",
            }
          }
        >
          <div
            role="listbox"
            style={
              Object {
                "marginTop": 0,
              }
            }
          >
            <div
              aria-posinset={1}
              aria-selected={false}
              className="uui-focus pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={2}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={3}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={4}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={5}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={6}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={7}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={8}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={9}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={10}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={11}
              aria-selected={false}
              className="pickerRow container -clickable align-items-center"
              onClick={[Function]}
              role="option"
            >
              <div
                className="cell size-30 padding-12 padding-left-12 align-widgets-top"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div
                    className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-6 container"
                  />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="uui-track-horizontal"
        style={
          Object {
            "display": "none",
            "height": 6,
            "position": "absolute",
          }
        }
      >
        <div
          className="uui-thumb-horizontal"
        />
      </div>
      <div
        className="uui-track-vertical"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": 6,
          }
        }
      >
        <div
          className="uui-thumb-vertical"
        />
      </div>
    </div>
  </div>,
  <div
    className="root size-36 background-white padding-12 container align-items-center"
  >
    <label
      className="container root size-18 uui-disabled"
    >
      <div
        className="uui-switch-body"
      >
        <input
          aria-checked={false}
          aria-disabled={true}
          checked={false}
          disabled={true}
          onChange={[Function]}
          role="switch"
          type="checkbox"
        />
        <div
          className="uui-switch-toggler"
        />
      </div>
      <div
        className="uui-input-label"
      >
        Show only selected
      </div>
    </label>
    <div
      className="flexSpacer"
    />
    <div
      className=""
      style={
        Object {
          "alignSelf": "center",
          "flexBasis": "auto",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <button
        aria-disabled={true}
        className="container uui-button-box uui-disabled -clickable root size-30 linkButton-color-blue uui-no-left-icon uui-no-right-icon"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={-1}
      >
        <div
          className="uui-caption"
        >
          CLEAR
        </div>
      </button>
    </div>
  </div>,
]
`;
